fixes partially visible skill detail

--- a/src/components/ui/Main/Skills/Skills.scss
+++ b/src/components/ui/Main/Skills/Skills.scss
@@ -40,6 +40,7 @@
 
 .skill{
   button{
+    display: inline-block;
     width:4rem;
     height: 4rem;
     margin: 0 .5rem;
@@ -77,7 +78,7 @@
 @include tablet{
   .detail{
     position: absolute;
-    right:$tabletWidth / 2;
+    right:50vw;
     width:$tabletWidth / 2;
     bottom:6.5rem;
     min-height: 32rem;
@@ -103,7 +104,6 @@
 @include desktop{
   .detail{
     position: absolute;
-    right:50vw;
     width:$desktopWidth / 2;
     bottom:6.5rem;
     min-height: 32rem;
